# Snapchat_Sentiment_Analysis

./: README.md  sanpchatPipeline.ipynb  texttranslator.ipynb
pipeline/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
pipeline/app/: logger.py  main.py
pipeline/app/routes/: prediction.py
pipeline/app/services/: ldamodel.py  sentimentmodel.py  topicloading.py
pipeline/artifacts/: lda_coherence_score.txt  lda_perplexity_score.txt  lda_testing_results.txt  sentiment_accuracy_score.txt  sentiment_classification_report.txt  sentiment_testing_results.txt  topics.txt
pipeline/config/: config.yaml
pipeline/ml_build/: config_loader.py  logger.py  main.py
pipeline/ml_build/services/: pipelinebuilderlda.py  pipelinebuildersentiment.py  pipelinerunner.py  preprocessing.py  testing.py  training.py
pipeline/model/: snapchat_sentiment_model.joblib  topic_labels.json
