[project]
name = "snapchat-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Shankara Narayana N G",email = "shankarnarayana92@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.13.0)",
    "asttokens (==3.0.1)",
    "attrs (==26.1.0)",
    "beautifulsoup4 (==4.14.3)",
    "bertopic (==0.17.4)",
    "certifi (==2026.4.22)",
    "charset-normalizer (==3.4.7)",
    "click (==8.3.3)",
    "colorama (==0.4.6)",
    "comm (==0.2.3)",
    "contourpy (==1.3.3)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.20)",
    "decorator (==5.2.1)",
    "executing (==2.2.1)",
    "fastapi (==0.136.1)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.29.0)",
    "fonttools (==4.62.1)",
    "fsspec (==2026.4.0)",
    "gensim (==4.4.0)",
    "h11 (==0.16.0)",
    "hdbscan (==0.8.42)",
    "hf-xet (==1.5.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "huggingface-hub (==1.14.0)",
    "idna (==3.13)",
    "ipykernel (==7.2.0)",
    "ipython (==9.13.0)",
    "ipython-pygments-lexers (==1.1.1)",
    "ipywidgets (==8.1.8)",
    "jedi (==0.20.0)",
    "jinja2 (==3.1.6)",
    "joblib (==1.5.3)",
    "jsonschema (==4.26.0)",
    "jsonschema-specifications (==2025.9.1)",
    "jupyter-client (==8.8.0)",
    "jupyter-core (==5.9.1)",
    "jupyterlab-widgets (==3.0.16)",
    "kiwisolver (==1.5.0)",
    "langdetect (==1.0.9)",
    "llvmlite (==0.47.0)",
    "markdown-it-py (==4.2.0)",
    "markupsafe (==3.0.3)",
    "matplotlib (==3.10.9)",
    "matplotlib-inline (==0.2.2)",
    "mdurl (==0.1.2)",
    "mpmath (==1.3.0)",
    "narwhals (==2.21.0)",
    "nbformat (==5.10.4)",
    "nest-asyncio (==1.6.0)",
    "nltk (==3.9.4)",
    "numba (==0.65.1)",
    "numpy (==2.4.4)",
    "packaging (==26.2)",
    "pandas (==3.0.2)",
    "parso (==0.8.7)",
    "pillow (==12.2.0)",
    "platformdirs (==4.9.6)",
    "plotly (==6.7.0)",
    "prompt-toolkit (==3.0.52)",
    "psutil (==7.2.2)",
    "pure-eval (==0.2.3)",
    "pydantic (==2.13.4)",
    "pydantic-core (==2.46.4)",
    "pygments (==2.20.0)",
    "pynndescent (==0.6.0)",
    "pyparsing (==3.3.2)",
    "python-dateutil (==2.9.0.post0)",
    "pyyaml (==6.0.3)",
    "pyzmq (==27.1.0)",
    "referencing (==0.37.0)",
    "regex (==2026.4.4)",
    "requests (==2.33.1)",
    "rich (==15.0.0)",
    "rpds-py (==0.30.0)",
    "safetensors (==0.7.0)",
    "scikit-learn (==1.8.0)",
    "scipy (==1.17.1)",
    "seaborn (==0.13.2)",
    "sentence-transformers (==5.4.1)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "soupsieve (==2.8.3)",
    "stack-data (==0.6.3)",
    "starlette (==1.0.0)",
    "sympy (==1.14.0)",
    "threadpoolctl (==3.6.0)",
    "tokenizers (==0.22.2)",
    "tornado (==6.5.5)",
    "tqdm (==4.67.3)",
    "traitlets (==5.15.0)",
    "transformers (==5.8.0)",
    "typer (==0.25.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2026.2)",
    "umap-learn (==0.5.12)",
    "urllib3 (==2.7.0)",
    "vadersentiment (==3.3.2)",
    "wcwidth (==0.7.0)",
    "widgetsnbextension (==4.0.15)",
    "wrapt (==2.1.2)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "torch (>=2.12.0,<3.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
